misc improvements to layout and commenting, add checkbox for tagging commentee

--- a/src/index.css
+++ b/src/index.css
@@ -205,7 +205,13 @@ a {
 }
 
 #root {
+    overflow-wrap: anywhere;
 }
+
+button {
+    overflow-wrap: normal;
+}
+
 #notifications-facet {
     display: grid;
     width: 100%;
