improve following view: - don't count boosts or replies - make fetch buttons clearer

--- a/src/index.css
+++ b/src/index.css
@@ -355,3 +355,8 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
     color: hsl(var(--destructive-foreground));
     background-color: hsl(var(--destructive));
 }
+
+.debugStatusMessage {
+    font-size: x-small;
+
+}
