fix max width constraining after following view is opened, and add a message saying that accounts are being loaded

--- a/src/views/facets/following.css
+++ b/src/views/facets/following.css
@@ -121,7 +121,7 @@
         flex-direction: column;
     }
 
-    #layoutColumnsRoot {
+    .followingFacet #layoutColumnsRoot {
         max-width: unset;
     }
 
