--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
-    --accent: 240 4.8% 95.9%;
+    --accent: 297 64% 28%;
     --accent-foreground: 240 5.9% 10%;
 
     --destructive: 0 84.2% 60.2%;
@@ -243,6 +243,9 @@ body {
 
 button {
     overflow-wrap: normal;
+    color: hsl(var(--button-foreground));
+    background-color: hsl(var(--button));
+
 }
 
 #notifications-facet {
@@ -349,6 +352,10 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
     margin-left: 0.5em;
     margin-right: 0.5em;
     margin-top: 0.25em;
+}
+
+.hoverAccentBorder:hover {
+    border-color: hsl(var(--accent));
 }
 
 .redButton {
