--- a/src/index.css
+++ b/src/index.css
@@ -330,7 +330,8 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
 
 .pbPostHeightLimiter{
     overflow: hidden;
-    max-height: 70vh;
+    max-height: 60vh;
+    /*max-height: 70vh;*/
 }
 
 .pbInput {
