--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 211 48% 44%;
     --foreground: 240 10% 3.9%;
     --page-background: 0 0% 100%;
 
@@ -17,9 +17,9 @@
     --border: 240 5.9% 50%;
         --input: 240 5.9% 50%;
 
-    --card-h: 0;
-    --card-s: 0%;
-    --card-l: 100%;
+    --card-h: 40;
+    --card-s: 12%;
+    --card-l: 81%;
     --card-foreground: 240 10% 3.9%;
 
     --primary-h: 332;
@@ -84,7 +84,7 @@
     --primary-l: 33%;
     --primary-foreground: 240 5.9% 98%;
 
-    --secondary-h: 208;
+    --secondary-h: 332;
     --secondary-s: 23%;
     --secondary-l: 32%;
     --secondary-foreground: 0 0% 98%;
@@ -146,6 +146,10 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     scrollbar-gutter: stable;
+}
+
+.facet-navigation-item {
+    border-radius: var(--radius);
 }
 
 .facet-navigation-item svg {
@@ -322,6 +326,9 @@ button {
     min-height: 5em;
 }
 
+#editorRoot {
+    padding-right: 1.0em;
+}
 #editorRoot .pbPostEditor {
     min-height: 50vh;
 }
@@ -356,7 +363,7 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
     color: var(--foreground);
     background-color: hsl(var(--card));
     border: 2px solid hsl(var(--foreground));
-    border-radius: 8px;
+    border-radius: var(--radius);
     padding: 0.45em;
     margin-left: 0.5em;
     margin-right: 0.5em;
@@ -367,7 +374,7 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
     display: inline-block;
     background-color: hsl(var(--card));
     border: 2px solid hsl(var(--border));
-    border-radius: 8px;
+    border-radius: var(--radius);
     padding: 0.45em;
     margin-left: 0.5em;
     margin-right: 0.5em;
@@ -388,16 +395,41 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
 
 }
 
-.pbButtonPrimary {
+.pbButtonPrimary,
+.facet-navigation-item
+{
     color: hsl(var(--primary-foreground));
-    background-color: hsl(var(--primary));
+    background: hsl(var(--primary-h) var(--primary-s) var(--primary-l));
+    border-radius: var(--radius);
+}
+.pbButtonPrimary:hover:not(.disabled),
+.facet-navigation-item:hover:not(.disabled)
+{
+    background: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.1));
+}
+.pbButtonPrimary:active:not(.disabled),
+.pbButtonPrimary:focus:not(.disabled),
+.facet-navigation-item:active:not(.disabled),
+.facet-navigation-item:focus:not(.disabled),
+.active-facet
+{
+    background: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.9));
+}
+
+.setting-flatAppearance {
+    .pbTopBar {
+        color: hsl(var(--secondary-foreground));
+        background: hsla(var(--secondary-h), var(--secondary-s), var(--secondary-l), 0.5);
+        border: 1px solid hsl(var(--secondary-h) var(--secondary-s) calc(var(--secondary-l) * 0.9));
+        backdrop-filter: blur(8px);
+    }
 }
 
 .not-setting-flatAppearance {
 
     .pbButtonPrimary {
         background: hsl(var(--primary-h) var(--primary-s) var(--primary-l));
-        border-radius: 10px 10px 10px 10px;
+        border-radius: var(--radius);
         border: 1px solid hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * .5));
         box-shadow: 
             0px 3px 20px hsla(var(--primary-h), var(--primary-s), var(--primary-l), 0.3),
@@ -461,7 +493,7 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
     .facet-navigation-item {
         color: hsl(var(--primary-foreground));
         background: hsl(var(--primary-h) var(--primary-s) var(--primary-l));
-        border-radius: 10px 10px 10px 10px;
+        border-radius: var(--radius);
         border: 1px solid hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * .5));
         box-shadow: 
             0px 3px 20px hsla(var(--primary-h), var(--primary-s), var(--primary-l), 0.3),
@@ -501,4 +533,94 @@ html.setting-unlimitedColumnWidth #layoutColumnsRoot {
         backdrop-filter: blur(8px);
     }
 
+}
+
+.setting-unroundedCornersAppearance {
+    --radius: 0px;
+}
+
+.setting-beveledAppearance {
+    .pbTopBar {
+        background: hsla(var(--secondary-h), var(--secondary-s), var(--secondary-l), 1);
+        background-image: linear-gradient(to right,
+            hsl(var(--secondary-h) var(--secondary-s) calc(var(--secondary-l) * 1.0)),
+            hsl(var(--secondary-h) calc(var(--secondary-s) * 0.60) calc(var(--secondary-l) * 2.5))
+            );
+        border-bottom: 0px;
+    }
+
+    .pbButtonPrimary {
+        border-width: 2px;
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+    }
+    .pbButtonPrimary:hover:not(.disabled) {
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.3));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.3));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.7));
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.7));
+    }
+
+    .pbButtonPrimary:active:not(.disabled),
+    .pbButtonPrimary:focus:not(.disabled) 
+    {
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+    }
+
+    .facet-navigation-item {
+        border-width: 2px;
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+    }
+    .facet-navigation-item:hover:not(.disabled) {
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.3));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.3));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.7));
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.7));
+    }
+
+    .facet-navigation-item:active:not(.disabled),
+    .facet-navigation-item:focus:not(.disabled),
+    .active-facet
+     {
+        border-bottom-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-right-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 1.5));
+        border-left-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+        border-top-color: hsl(var(--primary-h) var(--primary-s) calc(var(--primary-l) * 0.5));
+    }
+
+    .pbCard {
+        border-width: 2px;
+        border-top-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 1.5));
+        border-left-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 1.5));
+        border-right-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 0.5));
+        border-bottom-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 0.5));
+    }
+
+    .pbInput {
+        background: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 1.0));
+        border-bottom-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 1.5));
+        border-right-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 1.5));
+        border-left-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 0.5));
+        border-top-color: hsl(var(--card-h) var(--card-s) calc(var(--card-l) * 0.5));
+    }
+
+    .pbPostUserBar {
+        color: hsl(var(--secondary-foreground));
+        background-image: linear-gradient(to right,
+            hsl(var(--secondary-h) var(--secondary-s) calc(var(--secondary-l) * 1.0)),
+            hsl(var(--secondary-h) calc(var(--secondary-s) * 0.60) calc(var(--secondary-l) * 2.5))
+            );
+
+        padding-top:1px;
+        padding-bottom:1px;
+
+    }
 }
